@@ -988,7 +988,7 @@ static int faults_read_proc (char *page,
 	    p += sprintf(p,"%12d",
 			 rthal_realtime_faults[cpuid][trap]);
 
-	p += sprintf(p,"   (%s)",fault_labels[trap]);
+	p += sprintf(p,"    (%s)",fault_labels[trap]);
 	}
 
     p += sprintf(p,"\n");
